--- a/_sass/_skills.scss
+++ b/_sass/_skills.scss
@@ -7,12 +7,9 @@
 }
 
 .skill-grid {
+  padding-left: 0;
   list-style: none;
   margin: 0;
-  padding-left: 0;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
 }
 
 .skill-card {
